--- a/xaringan-themer.css
+++ b/xaringan-themer.css
@@ -46,13 +46,13 @@
   --text-color: #000000;
   --header-color: #621C37;
   --background-color: #FFFFFF;
-  --link-color: #621C37;
+  --link-color: #7da5f5;
   --text-bold-color: #621C37;
   --code-highlight-color: rgba(255,255,0,0.5);
   --inverse-text-color: #000000;
   --inverse-background-color: #EE0071;
   --inverse-header-color: #000000;
-  --inverse-link-color: #621C37;
+  --inverse-link-color: #7da5f5;
   --title-slide-background-color: #621C37;
   --title-slide-text-color: #FFFFFF;
   --header-background-color: #621C37;
